objects/Customer_SW_Download_History__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Customer SW Downloads History (Component)</relationshipLabel>
        <relationshipName>Customer_SW_Downloads_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <formula>Contact__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName  &amp; &apos;, &apos; &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer SW Downloads History</relationshipLabel>
        <relationshipName>Customer_SW_Downloads_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_Site__c</fullName>
        <label>Download Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Download__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date of Download</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Download_Status__c</fullName>
        <label>Download Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Type__c</fullName>
        <label>Download Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer SW Downloads History</relationshipLabel>
        <relationshipName>Customer_SW_Downloads_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>Name of Downloadable Item</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Release__c</fullName>
        <label>Major Release</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Customer SW Downloads History</relationshipLabel>
        <relationshipName>Customer_SW_Downloads_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STEU__c</fullName>
        <formula>Sold_To_Account__r.Name &amp; &apos; / &apos; &amp; End_User_Account__r.Name</formula>
        <label>STEU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWDL_Id__c</fullName>
        <displayFormat>SWDL-{000000}</displayFormat>
        <label>SWDL Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer SW Downloads History (Sold To Account)</relationshipLabel>
        <relationshipName>Customer_SW_Downloads_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_IP__c</fullName>
        <label>User IP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SW_Downloads_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Customer SW Download History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Date_of_Download__c</columns>
        <columns>File_Name__c</columns>
        <columns>Download_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Major_Release__c</columns>
        <columns>Component__c</columns>
        <columns>Version__c</columns>
        <columns>OS__c</columns>
        <columns>DL_Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
            <value>mahendra tirlotkar</value>
        </filters>
        <filters>
            <field>Date_of_Download__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2015</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Carbonite</fullName>
        <columns>NAME</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>User_IP__c</columns>
        <columns>Date_of_Download__c</columns>
        <columns>File_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Component__c</columns>
        <columns>Version__c</columns>
        <columns>DL_Site__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_User_Account__c</field>
            <operation>contains</operation>
            <value>Carbonite</value>
        </filters>
        <filters>
            <field>Component__c</field>
            <operation>equals</operation>
            <value>Genesys Softphone</value>
        </filters>
        <label>Carbonite Softphone Downloads</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DLH-{000000}</displayFormat>
        <label>SW Download History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer SW Downloads History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>